[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-manager"
version = "0.1.0"
description = "A general-purpose policy enforcement framework. Everything is a policy."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
ledger = ["httpx>=0.24"]
all = ["httpx>=0.24"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff",
    "mypy",
    "coverage",
    "pre-commit",
    "aiosqlite>=0.19",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/policy_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["policy_manager"]

# ── Mypy ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
